<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.harshillogin.firebaseauthapp.LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/Login_Email"
        android:inputType="textEmailAddress"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="88dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="349dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/Login_password"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="161dp"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Login_register"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/tvSignUpLink"
        android:layout_width="221dp"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/SignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.503"
        />

    <TextView
        android:id="@+id/tvLoginHeader"
        android:layout_width="155dp"
        android:layout_height="38dp"
        android:text="@string/login_activity"
        android:textSize="24sp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/etLoginEmail"
        android:layout_marginStart="79dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="@+id/etLoginEmail"
        android:layout_marginLeft="79dp"/>

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUpLink"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tvSignUpLink"
        android:layout_marginLeft="32dp"/>

</android.support.constraint.ConstraintLayout>
