<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.harshillogin.firebaseauthapp.ResetPasswordActivity">

    <TextView
        android:id="@+id/fForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fforgot_password"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="27dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fWe_just_needs_your_registered_email_id_to_send_you_passwor_dreset_instructions"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        android:layout_marginTop="86dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="83dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/femail_id"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="193dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"/>

    <EditText
        android:id="@+id/fEmailId"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/fEmailId"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnResetPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:text="@string/fResetpassword"
        android:textSize="18sp"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="175dp"
        app:layout_constraintLeft_toLeftOf="@+id/fEmailId"
        android:layout_marginLeft="21dp"/>

    <Button
        android:id="@+id/fBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginTop="35dp"
        android:text="@string/fBtnBack"
        app:layout_constraintRight_toRightOf="@+id/btnResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>
</android.support.constraint.ConstraintLayout>
